--- a/config/locales/it.yml
+++ b/config/locales/it.yml
@@ -1100,7 +1100,6 @@ it:
 
   field_summary: Sommario
   label_summary: Sommario
-  field_cross_group: AssoGRPO
   field_Invoice: Fattura
   field_Date_from: Valido dal
   field_Date_to: fino al
@@ -1127,11 +1126,6 @@ it:
   field_iva: IVA
   field_pagamento: Pagamento
 
-  field_cross_group: Banner utente
-  #label_cross_group: Banner utente
-  label_cross_group: Asso. Banner
-  label_cross_group_plural: Banner Utenti
-  label_cross_group_new: Nuovo banner per utente
 
   field_group_banner: Banner
   label_group_banner: Banner
@@ -1139,7 +1133,6 @@ it:
   label_group_banner_new: Nuovo banner
   label_group_banner_convention: Categorie utenti associate
   label_group_banner_convention_none: Nessuna categoria utente associata
-  label_cross_groups_from_group_banner: "Associazione Banner Utente (Banner <--> Categoria) per questo banner"
 
 #Organismo convenzionato collegato a type_organization e sigla
   label_type_organization: Org. Tipo
@@ -1181,6 +1174,7 @@ it:
   label_region: Regione
   label_province: Provincia
   label_comune: Comune
+  label_comune_plural: Comuni
   label_testo2: Testo 2
   label_testo3: Testo 3
   label_numero1: Numero 1
