--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -945,6 +945,7 @@ en:
   button_quote: Quote
   button_duplicate: Duplicate
   button_show: Show
+  button_hide: Hide
   button_edit_section: Edit this section
   button_export: Export
   button_prova: Leggi Gratis!
@@ -1708,6 +1709,7 @@ en:
   label_sended: 'email inviata'
   label_html: 'testo del messaggio'
   label_data: 'data invio'
+  label_first_sent: 'First sent date'
   label_newsletter_none: "Nessun invio fatto a questo giorno"
   field_abbonamento: "Abbonamento"
   field_abbonamento_type: "Tipo abbonamento"
