--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1679,6 +1679,8 @@ en:
   fs_qualifica: 'Qualifica o ruolo su Fiscosport (apparirà negli articoli)'
   notice_register_must_condition: "Dovete dichiarare di avere letto le condizioni d'uso per continuare"
   notice_register_must_consensus: "É necessario dare il consenso per la privacy"
+  button_edit_profile: 'Change user profile'
+  button_show_profile: 'Show own profile'
 
 #SCADENZA STATO
   stato_scadenza: "Stato abbonamento alla scadenza"
