--- a/config/locales/it.yml
+++ b/config/locales/it.yml
@@ -1697,6 +1697,9 @@ it:
   fs_qualifica: 'Qualifica o ruolo su Fiscosport (apparirà negli articoli)'
   notice_register_must_condition: "Dovete dichiarare di avere letto le condizioni d'uso per continuare"
   notice_register_must_consensus: "É necessario dare il consenso per la privacy"
+  button_edit_profile: 'Modifica dati personali'
+  button_show_profile: 'Vedi profilo personale'
+
 
 #SCADENZA STATO
   stato_scadenza: "Stato abbonamento alla scadenza"
