--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1696,6 +1696,7 @@ en:
 #EMAIL NEWSLETTER
   label_send_newsletter: Invia quindicinale
   button_send_newsletter: Invia quindicinale
+  button_send_emails: "Mails(%{jobs}) to send"
   button_send_newsletter_immediately: Send it immediately
   label_user_list_newsletters: "Storico degli invii precedenti"
   label_newsletter: Quindicinale
@@ -1719,3 +1720,5 @@ en:
   field_abbonamento_type: "Tipo abbonamento"
   field_user_fee: "Abbonato"
   label_all_users: "Tutti utenti"
+  mass_mailer: "Mass mailer sender"
+  label_nl_usr: "Utente"
