rescue must redirect

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1650,6 +1650,7 @@ en:
   content_articolo: "Contenuto dell'articolo"
   preview_fs_issue_abrv: "Vista abbonato"
   preview_fs_issue: "Vedi articolo lato pubblico"
+  project_not_found: "Project(%{id}) not found"
 
 #notice_email_sent: "Una email è stata spedita a %{value}"
   unauthorized: Non autorizzato ad accedere al contenuto
