--- a/config/locales/it.yml
+++ b/config/locales/it.yml
@@ -171,7 +171,7 @@ it:
   general_pdf_encoding: UTF-8
   general_first_day_of_week: '1'
 
-  notice_account_updated: "L'utente è stato aggiornato."
+  notice_account_updated: "Profillo utente aggiornato."
   notice_account_invalid_creditentials: Nome utente o password non validi.
   notice_account_password_updated: La password è stata aggiornata.
   notice_account_wrong_password: Password errata
