attachments download fix

--- a/config/locales/it.yml
+++ b/config/locales/it.yml
@@ -287,7 +287,7 @@ it:
   field_is_default: Stato predefinito
   field_tracker: Tracker
   field_subject: Titolo
-  field_due_date: Scadenza
+  field_due_date: 'Scadenza <br /> <span style="font-size: 0.7em;">[campo di ordinamento]</span>'
   field_assigned_to: Assegnato a
   field_priority: Priorità
   field_fixed_version: Versione prevista
@@ -820,8 +820,8 @@ it:
   label_year: Anno
   label_month: Mese
   label_week: Settimana
-  label_date_from: Data da
-  label_date_to: fino a
+  label_date_from: Data da...
+  label_date_to: 'Fino a...&nbsp;&nbsp;&nbsp; <br /> <span style="font-size: 0.7em;">[campo di ordinamento]</span>'
   label_language_based: Basato sul linguaggio
   label_sort_by: "Ordina per %{value}"
   label_send_test_email: Invia una email di prova
