--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1387,7 +1387,7 @@ en:
   field_sez: (old) sezione
   field_codice_attivazione: voucher
   field_iva_: (old) IVA
-  field_codicefiscale: Cofice Fiscale
+  field_codicefiscale: Codice Fiscale
   field_partitaiva: Partita IVA
   field_registrato: (old) registrato?
   field_num_reg_coni: (old) N° regionale CONI
