--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -370,6 +370,7 @@ en:
   setting_attachment_max_size: Maximum attachment size
   setting_issues_export_limit: Issues export limit
   setting_mail_from: Emission email address
+  setting_newsletter_from:  Emission newsletter address
   setting_bcc_recipients: Blind carbon copy recipients (bcc)
   setting_plain_text_mail: Plain text mail (no HTML)
   setting_host_name: Host name and path
